--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,2 +1,20 @@
 $container-max-width: 95rem;
 $padding-32: $padding-16 * 2;
+
+@mixin theme-dark {
+  --gray-100: #161616;
+  --gray-200: #323232;
+  --gray-500: #888888;
+
+  --color-link: #84b2ff;
+  --color-visited-link: #b88dff;
+
+  --body-background: #343a40;
+  --body-font-color: #e9ecef;
+
+  --icon-filter: brightness(0) invert(1);
+
+  --hint-color-info: #6bf;
+  --hint-color-warning: #fd6;
+  --hint-color-danger: #f66;
+}
